# fuck_machine

./: .gitignore  LICENSE  README.md  README.rst  config.py  fckmsheen.py  index.html  main.py  requirements.txt  setup.cfg  setup.py  speed_control.py  todo.txt
app/: __init__.py  digipot.py  forms.py  models.py  pwm.py  routes.py
app/static/css/: style.css
app/static/js/: fckmsheen.js
app/templates/: base.html  index.html
css/: style.css
js/: app.js  fckmsheen.js
python/: digipot.py  fckmsheen.py  main.py  pwm.py
python/static/js/: app.js  fckmsheen.js
python/templates/: index.html
src/fuck_machine/: config.ini  main.py
src/fuck_machine/_wip/: example.py  test.py  test2.py
src/fuck_machine/scripts/: common.py  config_parser.py  const.py  controller.py  graphs.py  intervaltimer.py  patterns.py  speed_control.py
src/fuck_machine/static/css/: style.css
src/fuck_machine/static/js/: fckmsheen.js
src/fuck_machine/static/js/_backup/: fckmsheen.js
src/fuck_machine/static/js/_wip/: fckmsheen.js  speedometer.js
src/fuck_machine/templates/: index.html
static/css/: style.css
static/js/: fckmsheen.js
templates/: index.html
