[metadata]
name = 'fuck_machine'
version = '1.0.0'
license = file: LICENSE
description = 'HTML interface for speed control via RPI'
long_description = file README.rst
author = 'ruffiana'
author_email = 'ruffiana.plays@gmail.com'
url = 'https://github.com/ruffiana/fuck_machine'

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    Flask
    matplotlib
    git+https://github.com/sn4k3/FakeRPi

[options.packages.find]
where=src